[package]
name = "deathrip"
authors = ["Yehuthith <yehuthit@gmail.com>"]
description = "Rips full-resolution images from the Dead Sea Scrolls digital library."
version = "0.1.1"
edition = "2021"
repository = "https://github.com/yehuthi/deathrip"
keywords = ["history", "judaism", "israel", "bible", "literature"]
categories = ["command-line-utilities", "multimedia::images"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "3.2.21", features = ["derive"] }
const_format = "0.2.26"
futures = "0.3.24"
image = "0.24.3"
itertools = "0.10.4"
itoa = "1.0.3"
regex = "1.6.0"
reqwest = "0.11.11"
tokio = { version = "1.21.1", features = ["rt", "macros"] }
